<resources>
    <string name="app_name">Fiction</string>

    <string name="cd_book">Book</string>
    <string name="cd_books">Books</string>
    <string name="cd_favorite_toggle">Favorite toggle</string>

    <string name="topics">Topics</string>

    <string name="all">All</string>
    <string name="fiction">Fiction</string>
    <string name="culture_and_society">Culture &amp; Society</string>
    <string name="mind_and_philosophy">Mind &amp; Philosophy</string>
    <string name="personal_growth">Personal growth</string>

    <string name="favorites_list">Favorites List</string>

    <string name="about_this_book">About this book</string>

    <string name="book_the_good_guy">The good guy</string>
    <string name="author_the_good_guy">Mark Mcallister</string>
    <string name="book_description_the_good_guy">"The Good Guy" by Mark Mcallister is a story about an ordinary man who finds himself
        caught in a whirlwind of criminal events. As his world begins to collapse, he is forced to confront the darker sides
        of society — and of himself. He must seek answers to complex questions about good and evil, justice and revenge.
        His journey becomes not only a battle against external forces, but also an inner transformation, where he uncovers
        new facets of his character and reconsiders his place in the world.
    </string>

    <string name="book_norse_mythology">Norse Mythology</string>
    <string name="author_norse_mythology">Neil Gaiman</string>
    <string name="book_description_norse_mythology">The great Norse myths, which have inspired so much of modern fiction,
        are dazzlingly retold by Neil Gaiman. Tales of dwarfs and frost giants, of treasure and magic, and of Asgard,
        home to the gods: Odin the all-father, highest and oldest of the Aesir; his mighty son Thor,
        whose hammer Mjollnir makes the mountain giants tremble; Loki, wily and handsome, reliably unreliable in his lusts;
        and Freya, more beautiful than the sun or the moon, who spurns those who seek to control her.
    </string>

    <string name="book_futurama">Futurama</string>
    <string name="author_futurama">Michael Douglas</string>
    <string name="book_description_futurama">"Futurama: Upgrade Your Brain Without Breaking Your Mind" is a gripping science
        fiction adventure that transports readers to a mesmerizing future world. In this era, where technology has reached
        astonishing heights and interplanetary travel is the norm, the protagonist sets out in search of a mysterious
        innovation capable of enhancing the human mind. Along the way, he faces perilous trials, encounters extraordinary creatures,
        and grapples with profound questions about consciousness and the boundaries of human potential.
        Will he unlock the secret of upgrading the brain — without losing himself in the process?
    </string>

    <string name="book_explore_your_creative">Explore Your Creative</string>
    <string name="author_explore_your_creative">Colby Sharp</string>
    <string name="book_description_explore_your_creative">"Explore Your Creative Mind to Positivity: A Habit That Will Transform Your Life"
        is an inspiring and practical guide to unlocking your creative potential and harnessing it for positive change.
        Colby Sharp, a renowned author and educator, shares simple yet powerful techniques to cultivate creative thinking,
        overcome creative blocks, and leverage creativity for emotional well-being. The book explores the profound connection
        between creativity and positive mindset, demonstrating how creative expression can alleviate stress, boost self-esteem,
        and foster greater life satisfaction.
    </string>

    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="book_description">Book description</string>
</resources>