<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_m">

    <TextView
        android:id="@+id/topics"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        android:text="@string/topics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFiction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/fiction"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics" />

    <Button
        android:id="@+id/buttonCultureAndSociety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/culture_and_society"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFiction"
        app:layout_constraintStart_toEndOf="@+id/buttonFiction"
        app:layout_constraintTop_toTopOf="@+id/buttonFiction" />

    <Button
        android:id="@+id/buttonMindAndPhilosophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/mind_and_philosophy"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFiction" />

    <Button
        android:id="@+id/buttonPersonalGrowth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/personal_growth"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMindAndPhilosophy" />

    <TextView
        android:id="@+id/textViewFiction"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:text="@string/fiction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPersonalGrowth" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_l"
        android:contentDescription="@string/cd_books"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFiction"
        tools:listitem="@layout/book_item" />

</androidx.constraintlayout.widget.ConstraintLayout>